force-app/main/default/objects/SessionManagement__c/SessionManagement__c.object-meta.xml
<CustomObject>
    <label>Session Management</label>
    <nameField>
        <displayFormat>S{0000000}</displayFormat>
        <label>Session Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>