force-app/main/default/objects/SessionManagement__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Session Managements</relationshipLabel>
    <relationshipName>SessionManagements</relationshipName>
    <type>Lookup</type>
</CustomField>