force-app/main/default/objects/SessionManagement__c/fields/EmailOtp__c.field-meta.xml
<CustomField>
    <fullName>EmailOtp__c</fullName>
    <label>Email Otp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>