force-app/main/default/objects/SessionManagement__c/fields/IpAddress__c.field-meta.xml
<CustomField>
    <fullName>IpAddress__c</fullName>
    <description>Ip Address</description>
    <label>Ip Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>