force-app/main/default/objects/SessionManagement__c/fields/OtpExpireTime__c.field-meta.xml
<CustomField>
    <fullName>OtpExpireTime__c</fullName>
    <label>Otp Expire Time</label>
    <type>DateTime</type>
</CustomField>