force-app/main/default/objects/SessionManagement__c/fields/SmsOtp__c.field-meta.xml
<CustomField>
    <fullName>SmsOtp__c</fullName>
    <label>Sms Otp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>